samples/_failures_safe/1761664336_de3476_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42d9262d.c: In function ‘main’:
./samples/SAFE/__tmp_42d9262d.c:164:12: error: missing terminating " character
  164 |     printf("
      |            ^
./samples/SAFE/__tmp_42d9262d.c:164:5: error: expected expression at end of input
  164 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_42d9262d.c:164:5: error: expected declaration or statement at end of input
